--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "match-sorter": "^6.3.1",
     "node-sass": "^8.0.0",
     "react": "^18.2.0",
+    "react-cookie": "^4.1.1",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.6.0",
     "sort-by": "^1.2.0"
@@ -25,6 +26,7 @@
     "@types/react-dom": "^18.0.9",
     "@types/sort-by": "^1.2.0",
     "@vitejs/plugin-react-swc": "^3.0.0",
+    "sass": "^1.57.1",
     "typescript": "^4.9.3",
     "vite": "^4.0.0"
   }
